# LibHakkun

./: .clang-format  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.TDM  README.md
addons/DebugRenderer/: CMakeLists.txt  README.md
addons/DebugRenderer/include/hk/gfx/: DebugRenderer.h  DebugRendererSettings.h  Font.h  Shader.h  Texture.h
addons/DebugRenderer/shaders/: test.hkf
addons/DebugRenderer/src/hk/gfx/: DebugRenderer.cpp  DebugRendererImpl.cpp  Font.cpp  MemoryBuffer.h  ShaderImpl.cpp  TextureImpl.cpp
addons/DebugRenderer/tools/: generate_font.py
addons/ExpHeap/: CMakeLists.txt  README.md
addons/ExpHeap/include/hk/mem/: ExpHeap.h
addons/ExpHeap/include/vapours/util/: util_intrusive_list.hpp
addons/ExpHeap/src/ams/lmem/: lmem_common.cpp  lmem_common.hpp  lmem_exp_heap.cpp  lmem_exp_heap.hpp
addons/ExpHeap/src/ams/lmem/impl/: lmem_impl_common.hpp  lmem_impl_common_heap.cpp  lmem_impl_common_heap.hpp  lmem_impl_exp_heap.cpp  lmem_impl_exp_heap.hpp
addons/ExpHeap/src/ams/util/: util_endian.hpp  util_fourcc.hpp  util_intrusive_list.hpp  util_parent_of_member.hpp
addons/ExpHeap/src/hk/mem/: ExpHeap.cpp
addons/Heap/: CMakeLists.txt
addons/Heap/include/hk/heap/: heap.h  lmem.h
addons/Heap/src/hk/: heap.cpp
addons/Heap/syms/: sdk.sym
addons/HeapSourceBss/: CMakeLists.txt  README.md
addons/HeapSourceBss/include/hk/mem/: BssHeap.h
addons/HeapSourceBss/src/hk/mem/: BssHeap.cpp  BssHeapWrappers.cpp
addons/HeapSourceDynamic/: CMakeLists.txt  README.md
addons/HeapSourceDynamic/src/hk/mem/: DynamicHeapWrappers.cpp
addons/HeapSourceDynamic/syms/hk/mem/: DynamicHeapWrappers.sym
addons/ImGui/: CMakeLists.txt  README.md
addons/ImGui/data/: shader_vsh.glsl
addons/ImGui/include/hk/gfx/: ImGuiAlloc.h  ImGuiBackendNvn.h  ImGuiBackendNvnImpl.h  ImGuiConfig.h
addons/ImGui/src/hk/gfx/: ImGuiBackendNvn.cpp  ImGuiBackendNvnImpl.cpp
addons/LogManager/: CMakeLists.txt  README.md
addons/LogManager/include/hk/nn/: diag.h
addons/Rust/: CMakeLists.txt  Cargo.toml
addons/Rust/src/: allocator.rs  interop.cpp  lib.rs  logging.rs  mutex.rs  panic.rs
addons/Sead/: CMakeLists.txt  README.md
hakkun/: CMakeLists.txt  Makefile
hakkun/core/: CMakeLists.txt
hakkun/core/include/hk/: Result.h  ValueOrResult.h  types.h
hakkun/core/include/hk/container/: Array.h  BitArray.h  Buffer.h  Cell.h  FixedString.h  FixedVec.h  Map.h  OneOf.h  Set.h  Span.h  StringView.h  Vec.h  VecSpan.h
hakkun/core/include/hk/container/detail/: OneOf.ih
hakkun/core/include/hk/detail/: DefaultResults.ih  macros.h  platform.h
hakkun/core/include/hk/diag/: SourceLocation.h  diag.h  results.h
hakkun/core/include/hk/prim/: CellOperations.h  Reflect.h  SpanOperations.h  VecOperations.h
hakkun/core/include/hk/prim/iterator/: Filter.h  Multi.h  Transform.h  WithIndex.h
hakkun/core/include/hk/prim/traits/: Function.h  Integer.h  Iterator.h  Type.h
hakkun/core/include/hk/util/: Algorithm.h  Allocator.h  Arena.h  Array.h  BitArray.h  Buffer.h  FixedString.h  FixedVec.h  Map.h  Math.h  PoolAllocator.h  Singleton.h  Span.h  Storage.h  Stream.h  StringView.h  TemplateString.h  Tuple.h  TypeName.h  Vec.h  hash.h
hakkun/core/src/hk/: Result.cpp
hakkun/core/src/hk/diag/: ResultName.cpp  diag.cpp
hakkun/include/: HakkunResults.ih
hakkun/include/hk/: Result.h  ResultMap.h  ValueOrResult.h  types.h
hakkun/include/hk/detail/: DefaultResults.ih
hakkun/include/hk/diag/: diag.h  ipclogger.h  results.h
hakkun/include/hk/hook/: Hook.h  InstrUtil.h  MapUtil.h  Replace.h  Trampoline.h  results.h
hakkun/include/hk/hook/a64/: Assembler.h  Instrs.h
hakkun/include/hk/init/: module.h
hakkun/include/hk/os/: Event.h  Mutex.h  SystemEvent.h  Thread.h
hakkun/include/hk/ro/: ElfUtil.h  ModuleHeader.h  RoModule.h  RoUtil.h  results.h
hakkun/include/hk/sail/: detail.h
hakkun/include/hk/services/: ldr.h  lm.h  pm.h  sm.h
hakkun/include/hk/services/am/: am.h  appType.h
hakkun/include/hk/services/am/detail/: applicationFunctions.h  applicationProxy.h  audioController.h  commonStateGetter.h  (+8 more)
hakkun/include/hk/services/apm/: service.h
hakkun/include/hk/services/fsp/: file.h  fileSystem.h  result.h  service.h  util.h
hakkun/include/hk/services/ncm/: programLocation.h
hakkun/include/hk/services/nv/: ioctl.h  result.h  results.h  service.h
hakkun/include/hk/services/settings/: result.h  system.h  util.h
hakkun/include/hk/services/socket/: address.h  config.h  poll.h  result.h  service.h
hakkun/include/hk/services/vi/: binder.h  parcel.h  result.h  service.h  window.h
hakkun/include/hk/sf/: cmif.h  hipc.h  sf.h  tipc.h  utils.h
hakkun/include/hk/svc/: api.h  cpu.h  results.h  types.h
hakkun/include/hk/util/: Algorithm.h  Allocator.h  Arena.h  Array.h  BitArray.h  Buffer.h  Context.h  FixedCapacityArray.h  FixedString.h  FixedVec.h  InitializeGuard.h  Lambda.h  Map.h  Math.h  PoolAllocator.h  Queue.h  Singleton.h  Span.h  Storage.h  Stream.h  StreamWriter.h  StringView.h  TemplateString.h  Tuple.h  TypeName.h  Vec.h  hash.h  hash_crc32data.h
hakkun/include/rtld/: RoModule.h  RoModuleList.h  types.h
hakkun/sail/: CMakeLists.txt
hakkun/sail/include/: clock.h  config.h  hash.h  parser.h  symbol.h  util.h
hakkun/sail/src/: config.cpp  fakelib.cpp  main.cpp  parser.cpp
hakkun/src/hk/diag/: ResultName.cpp  diag.cpp  ipclogger.cpp
hakkun/src/hk/hook/: MapUtil.cpp  Replace.cpp  Trampoline.cpp
hakkun/src/hk/init/: crt0.S  mod0.S  module.S  module.cpp  moduleEntry.S
hakkun/src/hk/os/: Libcxx.cpp  Thread.cpp
hakkun/src/hk/ro/: RoModule.cpp  RoUtil.cpp
hakkun/src/hk/sail/: detail.cpp  init.cpp
hakkun/src/hk/services/: am.cpp  apm.cpp  fsp.cpp  ldr.cpp  lm.cpp  nv.cpp  pm.cpp  settings.cpp  sm.cpp  socket.cpp  vi.cpp
hakkun/src/hk/services/vi/: bufferProducer.cpp
hakkun/src/hk/sf/: sf.cpp  tipc.cpp
hakkun/src/hk/svc/: api.S  api.aarch64.S  api.armv7a.S
hakkun/src/hk/util/: Context.cpp
hakkun/src/rtld/: DummyRtld.cpp  RoModule.cpp
hakkun/src/rtld/standalone/: SdkImportsFakeLib.cpp  diag.cpp  entry.S  main.cpp  module.cpp
(+55 files in other folders)
