[package]
name = "hakkun"
version = "0.1.0"
edition = "2024"
authors = ["Aubrey <aubrey@hall.ly>"]

[features]
default = ["logging", "panic_handler", "hakkun_allocator"]
logging = []
panic_handler = []
hakkun_allocator = ["maitake-sync/alloc"]

[dependencies]
maitake-sync = { version = "0.2.2", default-features = false }
